{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "5a7021bc-2780-4cd4-adeb-1eb457c247ad",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "da42a740-a581-4b83-812b-0d00af97d670",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchInput",
                    "type": "Value",
                    "id": "ea53780a-5fbf-42a5-9075-0bf932255675",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "0198bfa9-1d7b-45b2-a64a-cd9fab6309f8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "598609d0-0000-4cb2-89f9-f31267b403bf",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile;PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7c9b671-852b-48f0-9b1e-58f5bac164f1",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9143d0a-ab51-4907-92d0-d15fcf7422a4",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": []
        }
    ]
}